tests/sources/valid/for_nested.minipl
var x: int;
var y: int;
for x in 0..10 do
  for y in 0..10 do
    print " ";
    print x*y;
  end for;
  print "\n";
end for;