tests/sources/invalid/for_end_nonnumeric.minipl
for x in 10..false do
print x;
end for;